2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-11-07  Alan Coopersmith  <alan.coopersmith@sun.com>

	Changes to match bug #3180 checkin to monolith:
	
	* config/Makefile.am: 
	Generate Xsession from Xsession.cpp
	Add SHELL_CMD to cpp substitutions

	* configure.ac
	Set SHELL_CMD to /bin/ksh for sco, /bin/sh for all other OS'es.

2005-11-01  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Add AC_DEFINE_DIR calls for the path #defines previously set in
	RES_DEFINES section of xdm Imakefile.   (Some should probably
	be made settable via configure --with-* flags, but at least they
	correctly set defaults to match the directories specified to configure
	now.)

2005-11-01  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	* configure.ac:
	Update pkgcheck depedencies to work with separate build roots.

2005-10-28  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Add -DGREET_LIB to GREETER_CFLAGS on Solaris & SVR4 (was in #if SVR4
	in Imake)
	Add --with-random-device and checks for /dev/urandom & /dev/random
	for source of random data for key generation
	Link libXdmgreet with Xinerama & XPM libraries when using those 
	features.

2005-10-25  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	* Makefile.am:
	* config/Makefile.am:
	* greeter/Makefile.am:
	Allow overriding directories for xdm scripts/modules & configuration
	files via configure options --with-xdmlibdir & --with-xdmconfigdir
	Add libXt and libX11 to dependencies for libXdmgreet.
	
	* README: 
	Document default directories & configure options to change them	

2005-10-25  Shawn Starr <shawn.starr@rogers.com>
      
       * configure.ac:
       * Makefile.am:
       * greeter/Makefile.am:
       We forgot to build the Xdm greeter library. Add it to build and cleanup
       hardcoded values to find it.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>
