@@ -1,3 +1,8 @@
+2005-11-12  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* Makefile.am: 
+	Install xdm man page using APP_MAN_SUFFIX instead of forcing .1
+
 2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
